Complex form example, with validation input

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,59 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      Ionic Blank
+      Contact Form
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+<ion-content>
+  <p class="center">
+    <ion-icon class="large lighter" primary name="contact"></ion-icon>
   </p>
+
+  <form #f="ngForm" novalidate (ngSubmit)="onSubmit(f)">
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Name</ion-label>
+        <ion-input type="text" name="name" required [(ngModel)]="data.name"></ion-input>
+      </ion-item>
+      <div [hidden]="f.controls.name && (f.controls.name.valid ||
+      (f.controls.name.pristine && !isSubmitted))" class="note danger">
+        Name is required
+      </div>
+      <ion-item>
+        <ion-label floating>Phone</ion-label>
+        <ion-input type="tel" name="phone" [(ngModel)]="data.phone">
+        </ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Comment</ion-label>
+        <ion-input type="text" required minlength=4 name="comment"
+                   [(ngModel)]="data.comment">
+        </ion-input>
+      </ion-item>
+      <div *ngIf="(isSubmitted && f.controls.comment &&
+      f.controls.comment.pristine) || ((f.controls.comment) &&
+      (f.controls.comment.dirty && f.controls.comment.errors))" class="note
+      danger">
+        Please enter {{ 4 - (f.controls.comment.errors.minlength ?
+        f.controls.comment.errors.minlength.actualLength : 0) }} more
+        characters
+      </div>
+      <ion-item class="tos">
+        <ion-toggle item-left [(ngModel)]="data.tos" name="tos"
+                    type="button" (click)="noSubmit($event)"></ion-toggle>
+        <ion-label item-right>Agree to terms and conditions
+        </ion-label>
+      </ion-item>
+      <div [hidden]="(!isSubmitted) || (f.controls.tos && data.tos)"
+           class="note danger">
+        Please check Agree!
+      </div>
+    </ion-list>
+    <div class="center">
+      <button ion-button type="submit" round outline>Submit</button>
+    </div>
+  </form>
+
 </ion-content>
